force-app/main/default/objects/Weekly_Approved_Hours__c/Weekly_Approved_Hours__c.object-meta.xml
<CustomObject>
    <label>Weekly Approved Hours</label>
    <nameField>
        <displayFormat>WAH-{0000}</displayFormat>
        <label>Weekly Approved Hours ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Weekly Approved Hours</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>