force-app/main/default/objects/Weekly_Approved_Hours__c/fields/Detailed_Report__c.field-meta.xml
<CustomField>
    <fullName>Detailed_Report__c</fullName>
    <formula>HYPERLINK(&quot;https://viewledger.lightning.force.com/lightning/r/Report/00O1t000008khDQEAY/view?fv0=&quot;&amp;Id , &quot;View&quot;, &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Detailed Report</label>
    <type>Text</type>
</CustomField>