force-app/main/default/objects/Weekly_Approved_Hours__c/fields/Link_to_the_record__c.field-meta.xml
<CustomField>
    <fullName>Link_to_the_record__c</fullName>
    <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) &amp; Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link to the record</label>
    <type>Text</type>
</CustomField>