force-app/main/default/objects/Weekly_Approved_Hours__c/fields/Manager_Cannot_Edit__c.field-meta.xml
<CustomField>
    <fullName>Manager_Cannot_Edit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manager Cannot Edit</label>
    <type>Checkbox</type>
</CustomField>