force-app/main/default/objects/Weekly_Approved_Hours__c/fields/Rejected__c.field-meta.xml
<CustomField>
    <fullName>Rejected__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in automated process</description>
    <label>Rejected</label>
    <type>Checkbox</type>
</CustomField>