force-app/main/default/objects/Weekly_Approved_Hours__c/fields/Total_Hours_Billed__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours_Billed__c</fullName>
    <label>Total Hours Billed</label>
    <length>50</length>
    <type>Text</type>
</CustomField>