force-app/main/default/objects/Weekly_Approved_Hours__c/fields/User_Cannot_Edit__c.field-meta.xml
<CustomField>
    <fullName>User_Cannot_Edit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>User Cannot Edit</label>
    <type>Checkbox</type>
</CustomField>