force-app/main/default/objects/Weekly_Approved_Hours__c/fields/Week_Number__c.field-meta.xml
<CustomField>
    <fullName>Week_Number__c</fullName>
    <label>Week Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>