force-app/main/default/objects/Weekly_Approved_Hours__c/validationRules/Edit_not_allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>Edit_not_allowed</fullName>
    <active>true</active>
    <description>00e1t000001UNCv = System Administrator</description>
    <errorConditionFormula>ISCHANGED(Approval_Status__c)
&amp;&amp;
TEXT(Approval_Status__c) = &quot;Draft&quot; 
&amp;&amp;
(PRIORVALUE(Approval_Status__c) = &quot;Approved&quot;
||
PRIORVALUE(Approval_Status__c) = &quot;Invoiced&quot;)</errorConditionFormula>
    <errorMessage>It is not allowed to do changes at this stage, contact System Administrator.</errorMessage>
</ValidationRule>