force-app/main/default/objects/Weekly_Approved_Hours__c/listViews/My_Weekly_Approved_Hours.listView-meta.xml
<ListView>
    <fullName>My_Weekly_Approved_Hours</fullName>
    <columns>NAME</columns>
    <columns>Week_Number__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>Rejected__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>LAST_N_DAYS:60</value>
    </filters>
    <label>My Weekly Approved Hours</label>
</ListView>